--- a/style.css
+++ b/style.css
@@ -38,9 +38,8 @@ body {
     align-items: center;
 }
 
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+/* 
+.displayIcon {
+    width: 200px;
+    height: 200px;
+} */
