--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'valorant';
+    src: url('./media/valorant/Valorant/Font.ttf');
+}
+
 html,
 body {
     position: relative;
@@ -21,8 +26,7 @@ body {
 .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
-
+    background: #b1414cff;
     /* Center slide text vertically */
     display: -webkit-box;
     display: -ms-flexbox;
@@ -38,9 +42,39 @@ body {
     align-items: center;
 }
 
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.infos {
+    position: relative;
+    display: flex;
+    width: 50%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.name {
+    font-size: 3rem;
+    margin: 0;
+    text-align: left;
+    font-family: 'valorant';
+}
+
+.desc {
+    letter-spacing: 2px;
+    text-align: left;
+    font-size: 1rem;
+}
+
+
+.illustration {
+    width: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.displayIllustration {
+    height: 50rem;
+    position: absolute;
 }
