--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     color: #000;
     margin: 0;
     padding: 0;
+		display:flex;
 }
 
 .swiper {
@@ -54,11 +55,25 @@ body {
     padding-left: 100px;
 }
 
+
 .name {
     font-size: 3rem;
     margin: 0;
     text-align: left;
     font-family: 'valorant';
+}
+
+.nameWeapons{
+  max-width: 640px;
+    position: relative;
+    display: flex;
+    width: 50%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    font-family: 'valorant';
+    font-size:5rem;
+    padding-bottom: 33rem;
 }
 
 .desc {
@@ -82,8 +97,109 @@ body {
     position: absolute;
 }
 
+.displayIllustrationWeapons{
+  height:13rem;
+  position:absolute;
+}
+
 .displayBackground {
     width: 10000px
+}
+
+.swiper-button-next:after, .swiper-rtl .swiper-button-prev:after {
+	color: #ff4654;
+}
+
+.swiper-button-prev:after, .swiper-rtl .swiper-button-next:after {
+	color: #ff4654;
+}
+
+/**** SIDE NAVIGATION ****/
+
+aside {
+  color: #fff;
+  width: 250px;
+  height: 100vh;
+  background-image: linear-gradient(30deg , #ff4654, #ff4654);
+	display:flex;
+align-items:center;
+text-align: center;
+justify-content: center;
+}
+
+aside a {
+  font-size: 12px;
+  color: #fff;
+  display: block;
+  padding: 12px;
+  padding-left: 30px;
+  text-decoration: none;
+  -webkit-tap-highlight-color:transparent;
+}
+
+aside a:hover {
+  outline: none;
+  position: relative;
+}
+
+
+aside p {
+  margin: 0;
+  padding: 40px 0;
+}
+
+body {
+  font-family: 'Roboto';
+  width: 100%;
+  height: 100vh;
+  margin: 0;
+}
+
+.social {
+  height: 0;  
+}
+
+.social i:before {
+  width: 14px;
+  height: 14px;
+  font-size: 14px;
+  position: fixed;
+  color: #fff;
+  background: #0077B5;
+  padding: 10px;
+  border-radius: 50%;
+  top:5px;
+  right:5px;
+}
+
+h1{
+	writing-mode: tb-rl;
+text-orientation:upright;
+font-size:4.5rem;
+font-family: 'valorant';
+}
+
+.a-color{
+  color:rgb(26, 26, 26);
+  cursor:pointer;
+}
+
+.displayAgents{
+  display:none;
+  color:rgb(26, 26, 26);
+  font-size:5rem;
+font-family: 'valorant';
+writing-mode: tb-rl;
+text-orientation:upright;
+}
+
+.displayWeapons{
+  display:none;
+  color:rgb(26, 26, 26);
+  font-size:5rem;
+font-family: 'valorant';
+writing-mode: tb-rl;
+text-orientation:upright;
 }
 
 @media only screen and (max-width: 794px) {
